test/langtools/tools/javac/switchexpr/WrongBreakTest.out
WrongBreakTest.java:36:41: compiler.err.illegal.start.of.expr
WrongBreakTest.java:35:39: compiler.err.break.outside.switch.expression
WrongBreakTest.java:35:17: compiler.err.switch.expression.no.result.expressions
WrongBreakTest.java:36:9: compiler.err.ref.ambiguous: test, kindname.method, test(int), WrongBreakTest, kindname.method, test(java.lang.Object), WrongBreakTest
WrongBreakTest.java:38:13: compiler.err.no.switch.expression
WrongBreakTest.java:41:13: compiler.err.no.switch.expression
6 errors
